<resources>
    <string name="osb_study_id" translatable="false">wellcome</string>
    <string name="osb_study_name" translatable="false">MindKind</string>
    <string name="app_name">MindKind</string>
    <string name="button_submit">Submit</string>
    <string name="button_save">Save</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_task_list">Task List</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_external_id_sign_in">Sign in</string>
    <string name="content_desc_butterflies">Butterflies</string>
    <string name="set_reminder">Set reminder</string>
    <string name="do_not_send_me_reminders">Do not send me reminders</string>
    <string name="reminder_message">Let\'s set a Reminder for your Study Bursts</string>
    <string name="do_not_remind_me"><u>Do not remind me</u></string>
    <string name="when_do_you_want_a_reminder">When do you want a reminder?</string>
    <string name="remind_me_in_2_hours">Remind me in 2 hours</string>
    <string name="remind_me_in_1_hour">Remind me in 1 hour</string>
    <string name="remind_me_in_15_minutes">Remind me in 15 minutes</string>
    <string name="reminder_title_run_task">Time to complete the %s task</string>
    <string name="reminder_title_study_burst">Time to complete your study burst</string>
    <string name="ai_social">Social Connections</string>
    <string name="ai_sleep">Sleep</string>
    <string name="ai_movements">Body Movements</string>
    <string name="ai_experiences">Positive Experiences</string>
    <string name="ai_title">Great job!</string>
    <string name="ai_subtitle">You have completed 4 weeks of the study.  Please select the new AI for your next 4 weeks.</string>
    <string name="reminder_notification_channel_id">mPower Channel</string>
    <string name="reminder_notification_channel_title">mPower Reminders</string>
    <string name="reminder_notification_channel_desc">mPower reminders help you remember to log your data</string>
    <string name="foreground_channel_title">MindKind Passive Data Collection</string>
    <string name="foreground_channel_desc">The MindKind Study needs a foreground notification to allow our study app to be notified when your data changes.</string>
    <string name="foreground_notif_title">Now collecting data you agreed to share.</string>
    <string name="foreground_channel_engagement_title">MindKind Engagement</string>
    <string name="foreground_channel_engagement_desc">The MindKind Study uses notifications to keep the user engaged.</string>
    <string name="engagement_alert_message">Would you like to answer a few questions about why you have stopped?”</string>
    <string name="engagement_notification_title">It looks like you are no longer actively participating in the MindKind Study.</string>
    <string-array name="days_of_the_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="days_of_the_week_short">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string name="close_description">Close Conversation</string>
    <string name="time_picker_ok_button">Ok</string>
    <string name="time_picker_cancel_button"><u>Cancel</u></string>
    <string name="text_input_submit_button">Submit</string>
    <string name="button_record">Record</string>
    <string name="button_recorded">Recorded</string>
    <string name="button_undo">Undo</string>
    <string name="button_edit">Edit</string>
    <string name="button_add_details">Add details</string>
    <string name="button_skip"><u>Skip Question</u></string>
    <string name="withdraw_title">Hi %1$s,\n You have been enrolled in the mPower2 Study since %2$s</string>
    <string name="withdraw_details">You can withdraw from the study if you no longer want to be involved. Please note that you will be logged out of your account and no further data will be collected.</string>
    <string name="conversation_error_msg">Failed to create conversation</string>
    <string name="conversation_confirmation_title">Exit Survey.</string>
    <string name="conversation_confirmation_message">If you exit the survey, all your data will not be saved.</string>
    <string name="conversation_confirmation_continue"><u>Continue</u></string>
    <string name="conversation_confirmation_quit">Exit Survey</string>
    <string name="home_baseline_intro_title">Welcome to MindKind!</string>
    <string name="home_baseline_intro_message">Before we can get going on your daily experience, we need to know a bit about you. Once you complete these questions, we can get started on your daily MindKind journey. Click on a section to begin.</string>
    <string name="home_baseline_intro_continue">Continue</string>
    <string name="home_return_title">Weekly Summary</string>
    <string name="home_return_message_5strings">Here is what your %1$s and mood looked like last week. You said your mood was average or better %4$s days in the last week. You also said you %2$s %5$s days. Have you noticed a pattern between %3$s and your mood?</string>
    <string name="home_return_message_not_enough">We would like to share a summary of your mood and activity with you, but we didn\'t hear from you enough last week. Try participating in more daily surveys so we can show you some results.</string>
    <string name="home_okay">Okay</string>
    <string name="enter_code">Enter Code</string>
    <string name="sms_message">SMS Message</string>
    <string name="consent_error_title">Something went wrong…</string>
    <string name="close">Close</string>
    <string name="tester_message">Do you want to be a tester?</string>
    <string name="sms_india_message">Did you sign up by receiving and entering an SMS text message code?</string>
    <string name="registration_error_msg">Please check for errors in SMS confirmation code. You may need to wait 5 minutes and request a new code.</string>
    <string name="registration_header_subtext">Study</string>
    <string name="registration_title">Let\'s get started</string>
    <string name="registration_message">Please enter the phone number you used to sign up. We ask so we can verify it\'s you and get you started!\n\nGo to the link below to join the MindKind Study.</string>
    <string name="india_registration_message">Please enter your 10 or 11-digit mobile phone number and 6-digit personal code you used to sign up.\n\nGo to the link below to join the MindKind Study.</string>
    <string name="india_registration_detail">Your number and personal security code will be stored securely and separate from your data. They will not be shared with anyone.</string>
    <string name="registration_join_study">Join Study</string>
    <string name="registration_join_study_link"><u>Join Study</u></string>
    <string name="registration_continue_to_login"><u>Continue to Login</u></string>
    <string name="registration_continue">Continue</string>
    <string name="registration_link"><u>JOIN</u></string>
    <string name="registration_learn_link"><u>Learn More</u></string>
    <string name="registration_hint">Phone Number</string>
    <string name="india_password_registration_hint">Personal code</string>
    <string name="registration_link_sent">Your link is on its way!</string>
    <string name="registration_welcome_title">Have You Joined the\nMindKind Study?</string>
    <string name="registration_welcome_message">Be sure to join before you continue to login.</string>
    <string name="button_edit_lowercase"><u>edit</u></string>
    <string name="button_resend_link"><u>(Resend link)</u></string>
    <string name="registration_sms_message">We sent you a link to verify your identity via SMS text message to</string>
    <string name="registration_phone_error">The phone number you entered is not valid. Please enter a valid phone number.</string>
    <string name="registration_phone_code_error">The phone number or personal code you entered is not valid.</string>
    <string name="welcome_1_title">Welcome to the MindKind Study!</string>
    <string name="welcome_1_message">Your experience will help researchers better understand the emotional health of young people.</string>
    <string name="welcome_2_title">Interacting with the MindKind Study</string>
    <string name="welcome_2_message">Although MindKind Study surveys may look like a text chat - MindKind is a computer, not a person.\n\nIf you experience distress or thoughts of harming yourself, contact your physician or \<a href='https://mindkindstudy.org/contact'>find local mental health resources\</a> for ways to find help.</string>
    <string name="welcome_3_title">Your responses\nare important</string>
    <string name="welcome_3_message">Keeping up with your daily surveys and weekly check-ins gives the MindKind Study a better picture of your emotional health. You can skip any question you don\'t want to answer.</string>
    <string name="welcome_4_title">We protect your personal data</string>
    <string name="welcome_4_message">Your privacy is important to us. Encryption removes your name and encodes your data. This makes it difficult for people who view your data to be able to identify you.</string>
    <string name="welcome_5_title">We only record phone data with your consent</string>
    <string name="welcome_5_message">We record data from your phone usage. You can turn this off or on at any time and still be part of the study.</string>
    <string name="welcome_6_title">The choice is always up to you</string>
    <string name="welcome_6_message">We are glad you’re here! You can withdraw from the MindKind Study at any time. You can ask us for a copy of your data or to delete your data.</string>
    <string name="welcome_accept">Continue</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="day_x">Day %s</string>
    <string name="week_x">Week %s</string>
    <string name="week_12">Week 12</string>
    <string name="arm1_week_1_ai_title">Let’s get started!</string>
    <string name="arm1_week_1_ai_text">Please choose one of the options for your first topic. If you want, you\’ll have the opportunity to try something else later.</string>
    <string name="arm1_other_weeks_ai_title">Great job completing the first section!</string>
    <string name="arm1_other_weeks_ai_text">Now you get to choose your topic for the next section.</string>
    <string name="arm2_week_1_ai_title">Let’s get started on your daily experience!</string>
    <string name="arm2_week_1_ai_text">For the first section, we’ll ask you about your %s. Be sure to come back daily to tell us how things are going.</string>
    <string name="arm2_other_weeks_ai_title">Great job completing the first section!</string>
    <string name="arm2_other_weeks_ai_text">For the next section, your topic is %s.</string>
    <string name="task_list_no_items_msg">Great job finishing all your surveys! Come back tomorrow for more!</string>
    <string name="task_list_finished_study_msg">Thank you for completing the MindKind Study! You can now delete the app from your phone.</string>
    <string name="positive_experiences">Positive Experiences</string>
    <string name="social">Social Connections</string>
    <string name="sleep">Sleep</string>
    <string name="movement">Movement</string>
    <string name="health">Health</string>
    <string name="two_minutes">2 minutes</string>
    <string name="four_to_six_minutes">4-6 minutes</string>
    <string name="six_to_eight_minutes">6-8 minutes</string>
    <string name="three_minutes">3 minutes</string>
    <string name="six_minutes">6 minutes</string>
</resources>