<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ BSD 3-Clause License
  ~
  ~ Copyright 2021  Sage Bionetworks. All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification,
  ~ are permitted provided that the following conditions are met:
  ~
  ~ 1.  Redistributions of source code must retain the above copyright notice, this
  ~ list of conditions and the following disclaimer.
  ~
  ~ 2.  Redistributions in binary form must reproduce the above copyright notice,
  ~ this list of conditions and the following disclaimer in the documentation and/or
  ~ other materials provided with the distribution.
  ~
  ~ 3.  Neither the name of the copyright holder(s) nor the names of any contributors
  ~ may be used to endorse or promote products derived from this software without
  ~ specific prior written permission. No license is granted to the trademarks of
  ~ the copyright holders even if such marks are included in this software.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/confirmation_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <FrameLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/registration_background"
                android:contentDescription="@string/app_name"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/ocean300"
            android:paddingBottom="20dp"
            android:animateLayoutChanges="true">


            <TextView
                android:id="@+id/registration_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_title"
                android:layout_gravity="start"
                style="@style/TextAppearance.Sage.Settings.Header"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="16dp"
                android:paddingTop="16dp"
                android:textColor="@color/dark_text"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/registration_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_message"
                android:layout_gravity="center_horizontal"
                style="@style/TextAppearance.Sage.Settings.Header"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="16dp"
                android:textColor="@color/dark_text"
                android:textSize="18sp"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_text_field_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/registration_hint"
            android:textColorHint="@color/appLightGray"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/ocean300">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/external_id_password_field_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/india_password_registration_hint"
            android:textColorHint="@color/appLightGray"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/ocean300">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:inputType="numberPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/external_id_detail_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/india_registration_detail"
            android:layout_gravity="center_horizontal"
            style="@style/TextAppearance.Sage.Settings.Subheader"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="24dp"
            android:textColor="@color/dark_text"
            android:textSize="12sp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:indeterminate="true"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            style="@style/Sage.MaterialButton.Rounded"
            android:id="@+id/primary_button"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:textSize="16sp"
            android:text="@string/rsb_submit" />

        <com.google.android.material.button.MaterialButton
            style="@style/Sage.MaterialButton.UnderlinedBorderless"
            android:id="@id/secondary_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:textColor="@color/appTextDark"
            android:text="@string/registration_link"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/welcome_butterflies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:src="@drawable/ic_registration_butterflies"
        android:contentDescription="@string/content_desc_butterflies"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"/>

    <FrameLayout
        android:id="@+id/web_consent_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</RelativeLayout>