<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ BSD 3-Clause License
  ~
  ~ Copyright 2021  Sage Bionetworks. All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification,
  ~ are permitted provided that the following conditions are met:
  ~
  ~ 1.  Redistributions of source code must retain the above copyright notice, this
  ~ list of conditions and the following disclaimer.
  ~
  ~ 2.  Redistributions in binary form must reproduce the above copyright notice,
  ~ this list of conditions and the following disclaimer in the documentation and/or
  ~ other materials provided with the distribution.
  ~
  ~ 3.  Neither the name of the copyright holder(s) nor the names of any contributors
  ~ may be used to endorse or promote products derived from this software without
  ~ specific prior written permission. No license is granted to the trademarks of
  ~ the copyright holders even if such marks are included in this software.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/confirmation_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:paddingTop="0dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="24sp"
        android:textColor="@color/dark_text"
        android:textStyle="bold"
        android:text="@string/welcome_4_title"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="240dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="18sp"
        android:textColor="@color/dark_text"
        android:text="@string/welcome_4_message"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="320dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_margin="60dp">
        <com.google.android.material.button.MaterialButton
            style="@style/Sage.MaterialButton.Rounded"
            android:id="@+id/confirmation_quit"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/welcome_accept"
            android:layout_marginTop="30dp"
            android:enabled="false"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Sage.MaterialButton.UnderlinedBorderless"
            android:id="@+id/confirmation_continue"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:text="@string/welcome_cancel"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/welcome_wing"
        android:layout_width="497dp"
        android:layout_height="314dp"
        android:paddingLeft="0dp"
        android:src="@drawable/onboarding_wing_3"
        android:contentDescription="@string/content_desc_butterflies"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="-100dp"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/welcome_butterflies"
        android:layout_width="117dp"
        android:layout_height="99dp"
        android:paddingLeft="0dp"
        android:src="@drawable/welcome_4_butterflies"
        android:contentDescription="@string/content_desc_butterflies"
        android:layout_marginTop="135dp"
        android:layout_marginLeft="200dp"/>

    <!--ImageView
        android:id="@+id/welcome_lines"
        android:layout_width="174dp"
        android:layout_height="242dp"
        android:paddingLeft="0dp"
        android:src="@drawable/welcome_4_lines"
        android:contentDescription="@string/content_desc_butterflies"
        android:layout_marginTop="78dp"
        android:layout_marginLeft="-67dp"
        app:tint="@color/white"/-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>