<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ BSD 3-Clause License
  ~
  ~ Copyright 2021  Sage Bionetworks. All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification,
  ~ are permitted provided that the following conditions are met:
  ~
  ~ 1.  Redistributions of source code must retain the above copyright notice, this
  ~ list of conditions and the following disclaimer.
  ~
  ~ 2.  Redistributions in binary form must reproduce the above copyright notice,
  ~ this list of conditions and the following disclaimer in the documentation and/or
  ~ other materials provided with the distribution.
  ~
  ~ 3.  Neither the name of the copyright holder(s) nor the names of any contributors
  ~ may be used to endorse or promote products derived from this software without
  ~ specific prior written permission. No license is granted to the trademarks of
  ~ the copyright holders even if such marks are included in this software.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/confirmation_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="0dp"
    android:paddingTop="0dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="24sp"
        android:textColor="@color/dark_text"
        android:textStyle="bold"
        android:text="@string/welcome_1_title"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="220dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="18sp"
        android:textColor="@color/dark_text"
        android:text="@string/welcome_1_message"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="300dp"/>

    <ImageView
        android:id="@+id/welcome_wing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:paddingLeft="0dp"
        android:src="@drawable/onboarding_wing_0"
        android:contentDescription="@string/content_desc_butterflies"
        android:scaleType="centerInside"/>

    <ImageView
        android:id="@+id/welcome_butterflies"
        android:layout_width="61dp"
        android:layout_height="104dp"
        android:paddingLeft="12dp"
        android:src="@drawable/welcome_1_butterflies"
        android:contentDescription="@string/content_desc_butterflies"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="76dp"/>

    <!--ImageView
        android:id="@+id/welcome_lines"
        android:layout_width="241dp"
        android:layout_height="242dp"
        android:paddingLeft="0dp"
        android:src="@drawable/welcome_1_lines"
        android:contentDescription="@string/content_desc_butterflies"
        android:layout_marginTop="92dp"
        android:layout_marginLeft="191dp"
        app:tint="@color/white"/-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>